tests/frontend/fail/casecheck/multiple.act
// fails because <= is not a negation of >=
constructor of C
interface constructor(uint24 _x)

creates

  uint24 x := _x

behaviour increase of C
interface increase(uint24 new_x, uint24 new_y)

case new_x <= x:
  storage
    x => new_x

case new_y <= x:
  storage
    x => x + new_x

case new_x <= x:
  storage
    x => x + new_x

